# CodeCup2023

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt  bot.cpp
include/: chaos.hpp  lib.hpp  order.hpp  player.hpp  utils.hpp
scripts/: algorithm_visualizer.py  bot.cpp  gen_competition_package.sh  run_caiaio_competition.sh
scripts/entropy/src/competition/: Makefile  competition.cc
scripts/entropy/src/generator/: generator.c
scripts/entropy/src/manager/: manager.cc
src/: CMakeLists.txt  bot.cpp  lib.cpp  player.cpp
tests/: CMakeLists.txt  tests.cpp
